--- a/consultation-osteopathie-bruges.html
+++ b/consultation-osteopathie-bruges.html
@@ -4,97 +4,104 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- Meta Description -->
-  <meta name="description" 
+  <meta name="description"
     content="Henrique Nunes, ostéopathe à Bruges (33520), vous propose des soins personnalisés pour soulager vos douleurs et améliorer votre bien-être. Consultations en cabinet ou à domicile." />
-  
+
   <!-- Fonts and Styles -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100..700&family=Josefin+Sans:wght@100..700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="stylesheet/style.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100..700&family=Josefin+Sans:wght@100..700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="stylesheet/aos.css">
+  <link rel="stylesheet" href="stylesheet/style.css">
+  <link rel="icon" href="favicon.png" type="image/png">
+
 
   <!-- Page Title -->
   <title>Henrique Nunes - Ostéopathe à Bruges | Soins en Cabinet et à Domicile</title>
 
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Physician",
+  "name": "Henrique Nunes - Ostéopathe",
+  "description": "Henrique Nunes, ostéopathe à Bruges, propose des consultations personnalisées pour traiter douleurs et tensions. Disponible pour enfants, adultes, sportifs et femmes enceintes.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Allée de la Salamandre",
+    "addressLocality": "Bruges",
+    "postalCode": "33520",
+    "addressCountry": "FR"
+  },
+  "telephone": "0650636977",
+  "url": "https://www.doctolib.fr/osteopathe/bruges/henrique-nunes",
+  "image": "https://media.doctolib.com/image/upload/q_auto:eco,f_auto,w_1024,h_700,c_limit/h6imafab3aqd2orokn12.webp",
+  "areaServed": "Bruges et environs",
+  "priceRange": "$$",
+  "openingHoursSpecification": [
     {
-      "@context": "https://schema.org",
-      "@type": "MedicalBusiness",
-      "name": "Henrique Nunes - Ostéopathe",
-      "description": "Henrique Nunes, ostéopathe à Bruges, propose des consultations personnalisées pour traiter douleurs et tensions. Disponible pour enfants, adultes, sportifs et femmes enceintes.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Allée de la Salamandre",
-        "addressLocality": "Bruges",
-        "postalCode": "33520",
-        "addressCountry": "FR"
-      },
-      "telephone": "+33XXXXXXX",
-      "url": "https://www.doctolib.fr/osteopathe/bruges/henrique-nunes",
-      "image": "URL_DE_VOTRE_IMAGE",
-      "areaServed": "Bruges et environs",
-      "priceRange": "$$",
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday"
-          ],
-          "opens": "09:00",
-          "closes": "19:00"
-        }
-      ]
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "09:00",
+      "closes": "19:00"
     }
-  </script>
+  ],
+  "medicalSpecialty": "Osteopathic"
+}
+</script>
 </head>
 
 <body>
-
-<header class="header">
-
-    <nav class="navbar mw-container">    
+  <header class="header">
+    <nav class="navbar mw-container">
       <div class="header__wrapper">
-        <a href="index.html">
-          <p class="header__name">Henrique Nunes</p>
-          <p class="header__wrapper__job">Ostéopathe à Bruges</p>
+        <a href="/">
+          <span class="header__name">Henrique Nunes</span>
+          <span class="header__wrapper__job">Ostéopathe à Bruges</span>
         </a>
-    </div>
-    <div class="navbar__container">
-      <div class="navbar__wrapper">
-        <div class="navbar__menu">
-          <a class="navbar__link" href="index.html">Accueil</a>
-          <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
-          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
-          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
-            consulter ?</a>
-          <div class="dropdown">
-            <span class="navbar__link">Ostéopathie</span>
-            <div class="dropdown-content">
-              <div class="dropdown-content__wrapper">
-                <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie-bruges.html">Consultation</a>
-                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
-                  consulter ?</a>
+      </div>
+      <div class="navbar__container">
+        <div class="navbar__wrapper">
+          <div class="navbar__menu">
+            <a class="navbar__link" href="/">Accueil</a>
+            <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
+            <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
+            <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
+              consulter ?</a>
+            <div class="dropdown">
+              <span class="navbar__link">Ostéopathie</span>
+              <div class="dropdown-content">
+                <div class="dropdown-content__wrapper">
+                  <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
+                  <a class="dropdown-content__wrapper__link"
+                    href="consultation-osteopathie-bruges.html">Consultation</a>
+                  <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
+                    consulter ?</a>
+                </div>
               </div>
             </div>
+            <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
+            <a class="navbar__link" href="tarifs.html">Tarifs</a>
           </div>
-          <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
-          <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
+        <a class="btn btn-black" target="_blank" rel="noopener noreferrer"
+          href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Rdv
+          en ligne</a>
+        <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"
+            loading="lazy"></button>
+        <button class="menu-close show"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"
+            loading="lazy"></button>
       </div>
-      <a class="btn btn-black" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
-        aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
-      <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"></button>
-      <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"></button>
-    </div>
     </nav>
   </header>
   <main id="up" class="main">
@@ -104,55 +111,80 @@
     <section class="banner banner-intro">
       <img class="banner__img" src="./assets/images/banner-osteo.webp" alt="séance osteopathie" loading="lazy">
       <div class="banner__wrapper banner__wrapper--intro">
-       <h1 class="banner__title banner__title--intro">Consultation d'Ostéopathie</h1>
+        <h1 class="banner__title banner__title--intro">Consultation d'Ostéopathie</h1>
       </div>
     </section>
     <div data-aos="fade-in" class="mw-container article">
-        <p class="article__intro"> <strong>Une séance d’ostéopathie</strong> dure généralement entre <strong>45 minutes et une heure</strong>. Lors de cette consultation, l’ostéopathe prend le temps de connaître son patient et d’évaluer ses antécédents pour répondre efficacement à ses besoins.</p>
-        <article class="article__wrapper">
-            <h2 class="article__wrapper__title">L'interrogatoire</h2>
-            <p>Lors de la <strong> première séance </strong>, un <strong>entretien approfondi</strong> est réalisé, au cours duquel l'ostéopathe investigue la raison de la consultation. Cela inclut :</p>
-            <ul class="article__wrapper__list">
-              <li> <strong>Origine de la douleur</strong> (événement déclencheur, durée, mouvements douloureux).</li>
-              <li> <strong>Examen médical</strong> éventuel apporté par le patient.</li>
-              <li>Investigation de toutes les sphères du corps : <strong>neurologique, cardio-pulmonaire, digestif, uro-néphrologique.</strong></li>
-              <li>Discussion des <strong>antécédents médicaux personnels et familiaux.</strong></li>
-              <li>Évaluation de la <strong>qualité du sommeil, pratique sportive, alimentation</strong>, et du cadre de vie.</li>
-            </ul>
-            <p>Pour les <strong>séances suivantes</strong>, l'entretien se concentre sur l'évolution de la douleur.</p>
-        </article>
-        <article class="article__wrapper">
-          <h2 class="article__wrapper__title">L'examen clinique</h2>
-          <p>Si nécessaire, l'ostéopathe commence par des <strong>tests d'exclusion</strong>, visant à écarter toute pathologie qui ne relèverait pas de son domaine.</p>
-          <p>Si ces tests confirment qu'il peut poursuivre, il réalise une série de tests physiques prenant en compte <strong> l’ensemble du corps</strong>, afin <strong> d’identifier l’origine des douleurs</strong>.</p>
-        </article>
-        <article class="article__wrapper">
-          <h2 class="article__wrapper__title">Le traitement</h2>
-          <p>Une fois l'examen terminé, l'ostéopathe applique un traitement personnalisé, utilisant différentes techniques manuelles :</p>
-            <ul class="article__wrapper__list">
-            <li><strong>Techniques structurelles</strong></li>
-            <li><strong>Techniques viscérales</strong></li>
-            <li><strong>Techniques fasciales</strong></li>
-            <li><strong>Techniques crâniennes</strong></li>
-          </ul>
-          <p>Selon les cas, plusieurs séances peuvent être nécessaires pour corriger durablement les dysfonctionnements.</p>
-        </article>
-        <article class="article__wrapper">
-          <h2 class="article__wrapper__title">Préparer votre consultation</h2>
-          <p>Pour une consultation optimale, il est recommandé d'apporter :</p>
-            <ul class="article__wrapper__list">
-            <li>Vos <strong>radiographies</strong> ou derniers examens médicaux.</li>
-            <li>Pour <strong>les nourrissons et les enfants</strong>, pensez à prendre leur <strong> carnet de santé</strong>.</li>
-          </ul>
-        </article>
-    </div>
-    
+      <p class="article__intro"> <strong>Une séance d’ostéopathie</strong> dure généralement entre <strong>45 minutes et
+          une heure</strong>. Lors de cette consultation, l’ostéopathe prend le temps de connaître son patient et
+        d’évaluer ses antécédents pour répondre efficacement à ses besoins. Pour en savoir plus sur les
+        <strong>techniques d'ostéopathie</strong> utilisées, <a class="link-ext" href="osteopathie.html">cliquez
+          ici.</a>
+      </p>
+      </p>
+      <article class="article__wrapper">
+        <h2 class="article__wrapper__title">L'interrogatoire</h2>
+        <p>Lors de la <strong> première séance </strong>, un <strong>entretien approfondi</strong> est réalisé, au cours
+          duquel l'ostéopathe investigue la raison de la consultation. Cela inclut :</p>
+        <ul class="article__wrapper__list">
+          <li> <strong>Origine de la douleur</strong> (événement déclencheur, durée, mouvements douloureux).</li>
+          <li> <strong>Examen médical</strong> éventuel apporté par le patient.</li>
+          <li>Investigation de toutes les sphères du corps : <strong>neurologique, cardio-pulmonaire, digestif,
+              uro-néphrologique.</strong></li>
+          <li>Discussion des <strong>antécédents médicaux personnels et familiaux.</strong></li>
+          <li>Évaluation de la <strong>qualité du sommeil, pratique sportive, alimentation</strong>, et du cadre de vie.
+          </li>
+        </ul>
+        <p>Pour les <strong>séances suivantes</strong>, l'entretien se concentre sur l'évolution de la douleur.</p>
+      </article>
+      <article class="article__wrapper">
+        <h2 class="article__wrapper__title">L'examen clinique</h2>
+        <p>Si nécessaire, l'ostéopathe commence par des <strong>tests d'exclusion</strong>, visant à écarter toute
+          pathologie qui ne relèverait pas de son domaine.</p>
+        <p>Si ces tests confirment qu'il peut poursuivre, il réalise une série de tests physiques prenant en compte
+          <strong> l’ensemble du corps</strong>, afin <strong> d’identifier l’origine des douleurs</strong>.
+        </p>
+      </article>
+      <article class="article__wrapper">
+        <h2 class="article__wrapper__title">Le traitement</h2>
+        <p>Une fois l'examen terminé, l'ostéopathe applique un traitement personnalisé, utilisant différentes techniques
+          manuelles :</p>
+        <ul class="article__wrapper__list">
+          <li><strong>Techniques structurelles</strong></li>
+          <li><strong>Techniques viscérales</strong></li>
+          <li><strong>Techniques fasciales</strong></li>
+          <li><strong>Techniques crâniennes</strong></li>
+        </ul>
+        <p>Selon les cas, plusieurs séances peuvent être nécessaires pour corriger durablement les dysfonctionnements.
+        </p>
+      </article>
+      <article class="article__wrapper">
+        <h2 class="article__wrapper__title">Préparer votre consultation</h2>
+        <p>Pour une consultation optimale, il est recommandé d'apporter :</p>
+        <ul class="article__wrapper__list">
+          <li>Vos <strong>radiographies</strong> ou derniers examens médicaux.</li>
+          <li>Pour <strong>les nourrissons et les enfants</strong>, pensez à prendre leur <strong> carnet de
+              santé</strong>.</li>
+        </ul>
+      </article>
+      <article class="article__wrapper">
+        <h2 class="article__wrapper__title">Tarifs des consultations</h2>
+        <p>Pour connaître les tarifs des différentes consultations, veuillez consulter la page des <a class="link-ext"
+            href="tarifs.html">tarifs</a>.</p>
+      </article>
+      <p class="article__wrapper__text">Vous ne savez pas si l'ostéopathie est faite pour vous ? Consultez notre guide
+        pour savoir <a class="link-ext" href="quand-consulter-un-osteopathe-bruges.html">quand consulter un
+          ostéopathe</a> et comment une séance peut vous aider.</p>
 
+    </div>
     <section class="banner">
-      <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" alt="séance osteopathie" loading="lazy">
+      <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" alt="séance osteopathie"
+        loading="lazy">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
-        <a class="btn btn-light btn-xl" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
+        <a class="btn btn-light btn-xl" target="_blank" rel="noopener noreferrer"
+          href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+          aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </div>
     </section>
   </main>
@@ -163,10 +195,12 @@
           <h2 class="footer__wrapper__me__title">HENRIQUE NUNES</h2>
           <h3 class="footer__wrapper__me__job">Ostéopathe à Bruges</h3>
         </div>
-        <p class="footer__wrapper__para">Prise en charge des nourissons, enfants, femmes enceintes, adultes, sportfis,
+        <p class="footer__wrapper__para">Prise en charge des nourrissons, enfants, femmes enceintes, adultes, sportifs,
           personnes agées.
           Consultations uniquement sur rendez vous.</p>
-        <a class="btn btn-light" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
+        <a class="btn btn-light" target="_blank" rel="noopener noreferrer"
+          href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+          aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </article>
       <div class="footer__wrapper__consultation">
         <div class="footer__wrapper__consultation__btns">
@@ -176,7 +210,7 @@
         <div class="content-consultation">
           <p class="article__wrapper__text"> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14h00-
+            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14h00 -
                 20h00</span></p>
             <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9h30 -
                 15h30</span></p>
@@ -198,6 +232,8 @@
         </div>
       </div>
     </div>
+    <p class="mw-container developBy">© 2024 Web development by <a target="_blank" rel="noopener noreferrer"
+        href="https://stevebraco.vercel.app/">Steve Braco</a>. All rights reserved.</p>
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script type="module" src="js/index.js"></script>
