--- a/index.html
+++ b/index.html
@@ -4,99 +4,106 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <!-- Meta Description -->
   <meta name="description"
     content="Henrique Nunes, ostéopathe à Bruges (33520), vous propose des soins personnalisés pour soulager vos douleurs et améliorer votre bien-être. Consultations en cabinet ou à domicile." />
 
   <!-- Fonts and Styles -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100..700&family=Josefin+Sans:wght@100..700&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="stylesheet/style.css" />
+  <link rel="stylesheet" href="stylesheet/aos.css">
+  <link rel="stylesheet" href="stylesheet/style.css">
+  <link rel="icon" href="favicon.png" type="image/png">
+
 
   <!-- Page Title -->
   <title>Henrique Nunes - Ostéopathe à Bruges | Soins en Cabinet et à Domicile</title>
 
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Physician",
+  "name": "Henrique Nunes - Ostéopathe",
+  "description": "Henrique Nunes, ostéopathe à Bruges, propose des consultations personnalisées pour traiter douleurs et tensions. Disponible pour enfants, adultes, sportifs et femmes enceintes.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Allée de la Salamandre",
+    "addressLocality": "Bruges",
+    "postalCode": "33520",
+    "addressCountry": "FR"
+  },
+  "telephone": "0650636977",
+  "url": "https://www.doctolib.fr/osteopathe/bruges/henrique-nunes",
+  "image": "https://media.doctolib.com/image/upload/q_auto:eco,f_auto,w_1024,h_700,c_limit/h6imafab3aqd2orokn12.webp",
+  "areaServed": "Bruges et environs",
+  "priceRange": "$$",
+  "openingHoursSpecification": [
     {
-      "@context": "https://schema.org",
-      "@type": "MedicalBusiness",
-      "name": "Henrique Nunes - Ostéopathe",
-      "description": "Henrique Nunes, ostéopathe à Bruges, propose des consultations personnalisées pour traiter douleurs et tensions. Disponible pour enfants, adultes, sportifs et femmes enceintes.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Allée de la Salamandre",
-        "addressLocality": "Bruges",
-        "postalCode": "33520",
-        "addressCountry": "FR"
-      },
-      "telephone": "0650636977",
-      "url": "https://www.doctolib.fr/osteopathe/bruges/henrique-nunes",
-      "image": "https://media.doctolib.com/image/upload/q_auto:eco,f_auto,w_1024,h_700,c_limit/h6imafab3aqd2orokn12.webp",
-      "areaServed": "Bruges et environs",
-      "priceRange": "$$",
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday"
-          ],
-          "opens": "09:00",
-          "closes": "19:00"
-        }
-      ]
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "09:00",
+      "closes": "19:00"
     }
-  </script>
+  ],
+  "medicalSpecialty": "Osteopathic"
+}
+</script>
 </head>
 
 
 <body>
   <div class="rect" data-aos="fade-left"></div>
-<header class="header">
+  <header class="header">
 
-    <nav class="navbar mw-container">   <div class="header__wrapper">
-        <a href="index.html">
-          <p class="header__name">Henrique Nunes</p>
-          <p class="header__wrapper__job">Ostéopathe à Bruges</p>
+    <nav class="navbar mw-container">
+      <div class="header__wrapper">
+        <a href="/">
+          <span class="header__name">Henrique Nunes</span>
+          <span class="header__wrapper__job">Ostéopathe à Bruges</span>
         </a>
-    </div>
-    <div class="navbar__container">
-      <div class="navbar__wrapper">
-        <div class="navbar__menu">
-          <a class="navbar__link" href="index.html">Accueil</a>
-          <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
-          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
-          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
-            consulter ?</a>
-          <div class="dropdown">
-            <span class="navbar__link">Ostéopathie</span>
-            <div class="dropdown-content">
-              <div class="dropdown-content__wrapper">
-                <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie-bruges.html">Consultation</a>
-                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
-                  consulter ?</a>
+      </div>
+      <div class="navbar__container">
+        <div class="navbar__wrapper">
+          <div class="navbar__menu">
+            <a class="navbar__link" href="/">Accueil</a>
+            <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
+            <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
+            <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
+              consulter ?</a>
+            <div class="dropdown">
+              <span class="navbar__link">Ostéopathie</span>
+              <div class="dropdown-content">
+                <div class="dropdown-content__wrapper">
+                  <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
+                  <a class="dropdown-content__wrapper__link"
+                    href="consultation-osteopathie-bruges.html">Consultation</a>
+                  <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
+                    consulter ?</a>
+                </div>
               </div>
             </div>
+            <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
+            <a class="navbar__link" href="tarifs.html">Tarifs</a>
           </div>
-          <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
-          <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
+        <a class="btn btn-black" target="_blank" rel="noopener noreferrer"
+          href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Rdv
+          en ligne</a>
+        <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"
+            loading="lazy"></button>
+        <button class="menu-close hidden"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"
+            loading="lazy"></button>
       </div>
-      <a class="btn btn-black" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
-        aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
-      <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"></button>
-      <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"></button>
-    </div>
     </nav>
   </header>
   <main id="up" class="main">
@@ -125,7 +132,7 @@
       <img class="hero__img" src="./assets/images/photo-henrique-nunes.webp" loading="lazy"
         alt="Photo de l'ostéopathe Henrique Nunes" />
     </section>
-    <section data-aos="fade-in" class="osteo sect-mb">
+    <section class="osteo sect-mb">
       <article class="osteo__intro">
         <h2 class="osteo__intro__title">
           L'Ostéopathie pour Tous : Un Soin Adapté à Chaque Âge de la Vie
@@ -141,6 +148,25 @@
         </p>
       </article>
       <div class="osteo__all">
+        <div class="osteo__all__link">
+          <figure class="osteo__all__figure">
+            <img class="osteo__all__img" src="./assets/images/osteopathie-sportifs.webp" loading="lazy"
+              alt="Photo de sportifs" />
+            <figcaption class="osteo__all__figcaption">
+              <h3 class="osteo__all__figcaption__title">Ostéopathie pour les Sportifs</h3>
+              <p class="osteo__all__figcaption__desc">
+                Optimiser les performances, prévenir et traiter les blessures liées au sport.
+
+                L'ostéopathie aide à prévenir et traiter les blessures sportives comme les entorses, déchirures, et
+                douleurs chroniques. Elle améliore la mobilité, optimise les performances et favorise la récupération
+                après l’effort.
+              </p>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#sportifs">En
+                savoir
+                plus</a>
+            </figcaption>
+          </figure>
+        </div>
         <div class="osteo__all__link">
           <figure class="osteo__all__figure">
             <img class="osteo__all__img" src="./assets/images/osteopathie-enfants.webp" loading="lazy"
@@ -168,7 +194,8 @@
                 corps pendant la grossesse, facilite l'accouchement et soulage les douleurs postnatales, tout en
                 soutenant le bien-être de la maman et du bébé.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#femmes-enceintes">En
+              <a class="osteo__all__figcaption__link"
+                href="quand-consulter-un-osteopathe-bruges.html?#femmes-enceintes">En
                 savoir plus</a>
             </figcaption>
           </figure>
@@ -183,7 +210,8 @@
                 L’accouchement peut provoquer des tensions sur le crâne et le corps de votre bébé, entraînant des
                 troubles digestifs, déformations crâniennes ou inconforts. L’ostéopathie aide à rétablir son équilibre
                 et favorise son bien-être. Offrez à votre enfant un accompagnement doux pour bien démarrer sa vie. </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#nouveau-nes">En savoir
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#nouveau-nes">En
+                savoir
                 plus</a>
             </figcaption>
           </figure>
@@ -199,29 +227,13 @@
                 aide à soulager les douleurs liées à l'arthrose, les tensions musculaires et les troubles fonctionnels,
                 tout en soutenant la santé globale.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#seniors">En savoir
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#seniors">En
+                savoir
                 plus</a>
             </figcaption>
           </figure>
         </div>
-        <div class="osteo__all__link">
-          <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="./assets/images/osteopathie-sportifs.webp" loading="lazy"
-              alt="Photo de sportifs" />
-            <figcaption class="osteo__all__figcaption">
-              <h3 class="osteo__all__figcaption__title">Ostéopathie pour les Sportifs</h3>
-              <p class="osteo__all__figcaption__desc">
-                Optimiser les performances, prévenir et traiter les blessures liées au sport.
 
-                L'ostéopathie aide à prévenir et traiter les blessures sportives comme les entorses, déchirures, et
-                douleurs chroniques. Elle améliore la mobilité, optimise les performances et favorise la récupération
-                après l’effort.
-              </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#sportifs">En savoir
-                plus</a>
-            </figcaption>
-          </figure>
-        </div>
         <div class="osteo__all__link">
           <figure class="osteo__all__figure">
             <img class="osteo__all__img" src="./assets/images/osteopathie-entreprise.webp" loading="lazy"
@@ -233,7 +245,8 @@
                 en entreprise prévient les troubles musculo-squelettiques, réduit les arrêts maladie et optimise
                 l'ergonomie, favorisant ainsi un environnement de travail plus productif et sain.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#entreprise">En savoir
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#entreprise">En
+                savoir
                 plus</a>
             </figcaption>
           </figure>
@@ -257,7 +270,8 @@
                 chez vous, avec tout le matériel nécessaire pour assurer une séance de qualité dans le calme et la
                 sécurité de votre espace personnel.</p>
             </div>
-            <button class="btn btn-light" onclick="window.location.href='consultation-osteopathie-bruges.html'">En savoir
+            <button class="btn btn-light" onclick="window.location.href='consultation-osteopathie-bruges.html'">En
+              savoir
               plus</button>
           </article>
         </div>
@@ -273,7 +287,8 @@
                 confortable. Profitez d'un soin personnalisé, adapté à vos besoins, pour soulager vos douleurs et
                 améliorer votre mobilité.</p>
             </div>
-            <button class="btn btn-light" onclick="window.location.href='consultation-osteopathie-bruges.html'">En savoir
+            <button class="btn btn-light" onclick="window.location.href='consultation-osteopathie-bruges.html'">En
+              savoir
               plus</button>
           </article>
           <img class="photo" src="assets/images/clinique-medical-stadium.webp" loading="lazy"
@@ -291,7 +306,7 @@
         <div>
 
           <div class="advice__card__avatar">
-            <img class="advice__card__avatar__img" src="./assets/images/avatar-clement.png"
+            <img class="advice__card__avatar__img" loading="lazy" src="./assets/images/avatar-clement.png"
               alt="Avis Google utilisateur">
             <p>Clément Jeandet</p>
           </div>
@@ -346,10 +361,12 @@
           <h2 class="footer__wrapper__me__title">HENRIQUE NUNES</h2>
           <h3 class="footer__wrapper__me__job">Ostéopathe à Bruges</h3>
         </div>
-        <p class="footer__wrapper__para">Prise en charge des nourissons, enfants, femmes enceintes, adultes, sportfis,
+        <p class="footer__wrapper__para">Prise en charge des nourrissons, enfants, femmes enceintes, adultes, sportifs,
           personnes agées.
           Consultations uniquement sur rendez vous.</p>
-        <a class="btn btn-light" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
+        <a class="btn btn-light" target="_blank" rel="noopener noreferrer"
+          href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+          aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </article>
       <div class="footer__wrapper__consultation">
         <div class="footer__wrapper__consultation__btns">
@@ -359,7 +376,7 @@
         <div class="content-consultation">
           <p> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p><span class="content-consultation__day">Lundi</span> <span>14h00- 20h00</span></p>
+            <p><span class="content-consultation__day">Lundi</span> <span>14h00 - 20h00</span></p>
             <p><span class="content-consultation__day">Mardi</span> <span>9h30 - 15h30</span></p>
             <p><span class="content-consultation__day">Vendredi</span> <span>9h30 - 19h30</span></p>
           </div>
@@ -375,6 +392,8 @@
         </div>
       </div>
     </div>
+    <p class="developBy">© 2024 Web development by <a target="_blank" rel="noopener noreferrer"
+        href="https://stevebraco.vercel.app/">Steve Braco</a>. All rights reserved.</p>
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script type="module" src="js/index.js"></script>
