--- a/tarifs.html
+++ b/tarifs.html
@@ -2,60 +2,63 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Meta Description -->
-    <meta name="description"
-        content="Henrique Nunes, ostéopathe à Bruges (33520), vous propose des soins personnalisés pour soulager vos douleurs et améliorer votre bien-être. Consultations en cabinet ou à domicile." />
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Henrique Nunes, ostéopathe à Bruges (33520), vous propose des soins personnalisés pour soulager vos douleurs et améliorer votre bien-être. Consultations en cabinet ou à domicile." />
 
-    <!-- Fonts and Styles -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100..700&family=Josefin+Sans:wght@100..700&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="stylesheet/style.css" />
+  <!-- Fonts and Styles -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100..700&family=Josefin+Sans:wght@100..700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="stylesheet/aos.css">
+  <link rel="stylesheet" href="stylesheet/style.css">
+  <link rel="icon" href="favicon.png" type="image/png">
 
-    <!-- Page Title -->
-    <title>Henrique Nunes - Ostéopathe à Bruges | Soins en Cabinet et à Domicile</title>
 
-    <!-- JSON-LD Structured Data -->
-    <script type="application/ld+json">
+  <!-- Page Title -->
+  <title>Henrique Nunes - Ostéopathe à Bruges | Soins en Cabinet et à Domicile</title>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Physician",
+  "name": "Henrique Nunes - Ostéopathe",
+  "description": "Henrique Nunes, ostéopathe à Bruges, propose des consultations personnalisées pour traiter douleurs et tensions. Disponible pour enfants, adultes, sportifs et femmes enceintes.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Allée de la Salamandre",
+    "addressLocality": "Bruges",
+    "postalCode": "33520",
+    "addressCountry": "FR"
+  },
+  "telephone": "0650636977",
+  "url": "https://www.doctolib.fr/osteopathe/bruges/henrique-nunes",
+  "image": "https://media.doctolib.com/image/upload/q_auto:eco,f_auto,w_1024,h_700,c_limit/h6imafab3aqd2orokn12.webp",
+  "areaServed": "Bruges et environs",
+  "priceRange": "$$",
+  "openingHoursSpecification": [
     {
-      "@context": "https://schema.org",
-      "@type": "MedicalBusiness",
-      "name": "Henrique Nunes - Ostéopathe",
-      "description": "Henrique Nunes, ostéopathe à Bruges, propose des consultations personnalisées pour traiter douleurs et tensions. Disponible pour enfants, adultes, sportifs et femmes enceintes.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Allée de la Salamandre",
-        "addressLocality": "Bruges",
-        "postalCode": "33520",
-        "addressCountry": "FR"
-      },
-      "telephone": "+33XXXXXXX",
-      "url": "https://www.doctolib.fr/osteopathe/bruges/henrique-nunes",
-      "image": "URL_DE_VOTRE_IMAGE",
-      "areaServed": "Bruges et environs",
-      "priceRange": "$$",
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday"
-          ],
-          "opens": "09:00",
-          "closes": "19:00"
-        }
-      ]
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "09:00",
+      "closes": "19:00"
     }
-  </script>
+  ],
+  "medicalSpecialty": "Osteopathic"
+}
+</script>
 </head>
 
 <body>
@@ -64,19 +67,20 @@
 
         <nav class="navbar mw-container">
             <div class="header__wrapper">
-                <a href="index.html">
-                    <p class="header__name">Henrique Nunes</p>
-                    <p class="header__wrapper__job">Ostéopathe à Bruges</p>
+                <a href="/">
+                    <span class="header__name">Henrique Nunes</span>
+                    <span class="header__wrapper__job">Ostéopathe à Bruges</span>
                 </a>
             </div>
             <div class="navbar__container">
                 <div class="navbar__wrapper">
                     <div class="navbar__menu">
-                        <a class="navbar__link" href="index.html">Accueil</a>
+                        <a class="navbar__link" href="/">Accueil</a>
                         <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
                         <a class="navbar__link navbar__link__mobile"
                             href="consultation-osteopathie-bruges.html">Consultation</a>
-                        <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
+                        <a class="navbar__link navbar__link__mobile"
+                            href="quand-consulter-un-osteopathe-bruges.html">Quand
                             consulter ?</a>
                         <div class="dropdown">
                             <span class="navbar__link">Ostéopathie</span>
@@ -95,11 +99,12 @@
                         <a class="navbar__link" href="tarifs.html">Tarifs</a>
                     </div>
                 </div>
-                <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
-                target="_blank" rel="noopener noreferrer" aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
-                <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"></button>
-                <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg"
-                        alt="Icone Menu"></button>
+                <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" target="_blank"
+                    rel="noopener noreferrer" aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
+                <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"
+                        loading="lazy"></button>
+                <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"
+                        loading="lazy"></button>
             </div>
         </nav>
     </header>
@@ -117,18 +122,20 @@
 
         <div data-aos="fade-in" class="mw-container article">
             <p class="article__intro">A l’heure actuelle, il n’existe pas de prise en charge par la <strong>sécurité
-                    sociale</strong> pour les séances d’<strong>ostéopathie</strong>. Toutefois, de nombreuses
-                <strong>mutuelles</strong> remboursent les <strong>consultations</strong> en totalité ou en partie.
+                    sociale</strong> pour les séances d’<strong>ostéopathie</strong>.
                 Cependant, de nombreuses <strong>mutuelles</strong> remboursent les <strong>consultations</strong> en
                 totalité ou en partie sur présentation d’une <strong>facture</strong> remise par l’ostéopathe. Nous vous
                 conseillons de vous renseigner auprès de votre <strong>mutuelle</strong> pour connaître les conditions
-                de remboursement.</p>
-            <p class="article__intro">Chez votre ostéopathe à Bruges, le règlement des consultations peut se faire par chèque ou en espèces.</p>
+                de remboursement.
+            </p>
+            <p class="article__intro">Chez votre ostéopathe à Bruges, le règlement des consultations peut se faire par
+                chèque ou en espèces.</p>
             <article class="article__wrapper">
                 <h2 class="article__wrapper__title">Tarifs des Consultations</h2>
                 <p class="article__intro">Pour les consultations à domicile, le tarif peut varier en fonction de la
                     <strong>distance parcourue</strong>. Vous trouverez ci-dessous un tableau indiquant les tarifs en
-                    fonction des <strong>kilomètres</strong> :</p>
+                    fonction des <strong>kilomètres</strong> :
+                </p>
 
                 <div class="consultation">
                     <article class="consultation__card">
@@ -162,17 +169,21 @@
                 </div>
                 <p class="article__intro">💡 <strong>Note</strong> : Les <strong>assurances automobiles</strong> peuvent
                     également couvrir une <strong>consultation ostéopathique</strong> lorsqu’elle fait suite à un
-                    <strong>accident</strong> dont vous avez été victime.</p>
+                    <strong>accident</strong> dont vous avez été victime.
+                </p>
             </article>
         </div>
         <section class="banner">
-            <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy" alt="Séance d'ostéopathie">
+            <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy"
+                alt="Séance d'ostéopathie">
             <div class="banner__wrapper">
-              <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
-              <a class="btn btn-light btn-xl" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
-      
+                <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
+                <a class="btn btn-light btn-xl" target="_blank" rel="noopener noreferrer"
+                    href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+                    aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
+
             </div>
-          </section>
+        </section>
 
     </main>
 
@@ -183,11 +194,13 @@
                     <h2 class="footer__wrapper__me__title">HENRIQUE NUNES</h2>
                     <h3 class="footer__wrapper__me__job">Ostéopathe à Bruges</h3>
                 </div>
-                <p class="footer__wrapper__para">Prise en charge des nourissons, enfants, femmes enceintes, adultes,
-                    sportfis,
+                <p class="footer__wrapper__para">Prise en charge des nourrissons, enfants, femmes enceintes, adultes,
+                    sportifs,
                     personnes agées.
                     Consultations uniquement sur rendez vous.</p>
-                <a class="btn btn-light" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
+                <a class="btn btn-light" target="_blank" rel="noopener noreferrer"
+                    href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+                    aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
 
             </article>
             <div class="footer__wrapper__consultation">
@@ -199,14 +212,17 @@
                     <p class="article__wrapper__text"> <span class="content-consultation__day">Horaires :</span></p>
                     <div>
                         <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span>
-                            <span>14h00-
-                                20h00</span></p>
+                            <span>14h00 -
+                                20h00</span>
+                        </p>
                         <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span>
                             <span>9h30 -
-                                15h30</span></p>
+                                15h30</span>
+                        </p>
                         <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span>
                             <span>9h30 -
-                                19h30</span></p>
+                                19h30</span>
+                        </p>
                     </div>
                 </div>
                 <div class="content-medical close">
@@ -218,14 +234,18 @@
                     <div>
                         <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span>
                             <span>9h30 -
-                                13h00</span></p>
+                                13h00</span>
+                        </p>
                         <p class="article__wrapper__text"><span class="content-consultation__day">Jeudi</span>
                             <span>9h30 - 14h30,
-                                16h00 - 20h00</span></p>
+                                16h00 - 20h00</span>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+        <p class="mw-container developBy">© 2024 Web development by <a target="_blank" rel="noopener noreferrer"
+                href="https://stevebraco.vercel.app/">Steve Braco</a>. All rights reserved.</p>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script type="module" src="js/index.js"></script>
